Added Changes to index.html file

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <title>Sample WebPage</title>
 </head>
 <body>
-<h3> This is a demo file </h3>
+<h3> This is a demo file - and i need to push changes to git </h3>
 <p>
 Learning git!
 </p>
